# Sokoclone

./: .gitignore  CMakeLists.txt  Makefile  Sokoclone
include/: entity.hpp  map.hpp  movable.hpp  player.hpp  wall.hpp
res/: map.txt
src/: Sokoclone.sublime-project  Sokoclone.sublime-workspace  entity.cpp  main.cpp  map.cpp  movable.cpp  player.cpp  wall.cpp
